addons/logging/manifests/ingress-nginx/logging-ingress-nginx.yaml
# SPDX-FileCopyrightText: © 2024 Siemens Healthineers AG
#
# SPDX-License-Identifier: MIT

# The opensearch-dashboards service exposes a web application on port 5601
# It is uses a very tricky design to solve the problem of relative paths:
# in the deployment.yaml, we configure these environment variables:
# SERVER_BASEPATH = "/logging": the application will generate all relative
#    URLs starting with this prefix!
# SERVER_REWRITEBASEPATH = "true": the application will expect the
# incoming calls to be part of the request path (needed for port forwarding)
---
# this ingress will be merged with ingress provided in:
# addons/ingress/nginx/manifests/cluster-local-ingress.yaml
# and exposes the opensearch-dashboards web application on:
# https://k2s.cluster.local/logging
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logging-nginx-cluster-local
  namespace: logging
spec:
  ingressClassName: nginx
  rules:
    - host: k2s.cluster.local
      http:
        paths:
          - backend:
              service:
                name: opensearch-dashboards
                port:
                  number: 5601
            path: /logging
            pathType: Prefix
